Added Get methods on Leave controller

--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
@@ -63,7 +63,7 @@
                     <span>days</span>
                     <span>days</span>
                 </div>
-                <button type="button" onclick="openCreateModal()">+</button>
+                <button type="button" onclick="openCreateModal(type.Id)">+</button>
 
             </div>
             }
