--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/UpdateUser.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/UpdateUser.cshtml
@@ -18,7 +18,7 @@
             @Html.HiddenFor(model => model.employee.userid)
 
             <!-- Display validation errors -->
-            @Html.ValidationSummary(true, "ModelOnly", new { @class = "text-danger" })
+            @Html.ValidationSummary(true, "All", new { @class = "text-danger" })
             <!-- Profile -->
             <div class="form-group">
                 title:
