--- a/Employee-Intranet/Emp_Intranet-UI/Content/Site.css
+++ b/Employee-Intranet/Emp_Intranet-UI/Content/Site.css
@@ -1,5 +1,13 @@
-﻿/* The Modal (background) */
-.modal {
+﻿
+
+.text-danger {
+    color: aqua;
+    font-style: italic;
+    font-family: auto;
+    /* margin-top: 0px; */
+}
+    /* The Modal (background) */
+    .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -58,3 +66,6 @@ hr {
     .cancelbtn, .deletebtn {
         width: 100%;
     }
+
+
+
