--- a/Employee-Intranet/Emp_Intranet-UI/Views/Auth/Login.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Auth/Login.cshtml
@@ -16,19 +16,24 @@
     @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
-        <div class="login-form">
-            <h2>Sign In</h2>
-            <span>Username/Email</span>
-            <!--<input type="email" placeholder="janed@company.co" id="email" required>-->
-            @Html.EditorFor(model => model.user_email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.user_email, "", new { @class = "text-danger" })
-            <span>Password</span>
-            <!--<input type="password" placeholder="*******" name="password" id="password" required>-->
-            @Html.EditorFor(model => model.user_password, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.user_password, "", new { @class = "text-danger" })
-            <button type="submit">Login</button>
 
-        </div>
+        <!-- Display validation errors -->
+        @Html.ValidationSummary(true, "All", new { @class = "text-danger" })
+
+<div class="login-form">
+    <h2>Sign In</h2>
+
+    <span>Username/Email</span>
+    @Html.EditorFor(model => model.user_email, new { htmlAttributes = new { @class = "form-control" } })
+
+    <span>Password</span>
+    @Html.EditorFor(model => model.user_password, new { htmlAttributes = new { @class = "form-control" } })
+
+    <button type="submit">Login</button>
+    @Html.ValidationMessageFor(model => model.user_email, "", new { @class = "text-danger" })
+    @Html.ValidationMessageFor(model => model.user_password, "", new { @class = "text-danger" })
+</div>
+
     }
 </div>
 
