! - Made changes to a few and Re-Do starting with the login

--- a/Employee-Intranet/Emp_Intranet-UI/Views/Auth/Login.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Auth/Login.cshtml
@@ -13,26 +13,22 @@
         </p>
 
     </div>
-    @using (Html.BeginForm())
+    @using (Html.BeginForm("Login", "Auth", FormMethod.Post, new { @class = "login-form" }))
     {
+        <!--Security for the Login Form-->
         @Html.AntiForgeryToken()
 
+        <h2>Sign In</h2>
         <!-- Display validation errors -->
-        @Html.ValidationSummary(true, "All", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationMessageFor(model => model.user_email, "", new { @class = "text-danger" })
+        <span>Username/Email</span>
+        @Html.TextBoxFor(model => model.user_email, new { htmlAttributes = new { @class = "form-control" } })
 
-<div class="login-form">
-    <h2>Sign In</h2>
-
-    <span>Username/Email</span>
-    @Html.EditorFor(model => model.user_email, new { htmlAttributes = new { @class = "form-control" } })
-
-    <span>Password</span>
-    @Html.EditorFor(model => model.user_password, new { htmlAttributes = new { @class = "form-control" } })
-
-    <button type="submit">Login</button>
-    @Html.ValidationMessageFor(model => model.user_email, "", new { @class = "text-danger" })
-    @Html.ValidationMessageFor(model => model.user_password, "", new { @class = "text-danger" })
-</div>
+        @Html.ValidationMessageFor(model => model.user_password, "", new { @class = "text-danger" })
+        <span>Password</span>
+        @Html.PasswordFor(model => model.user_password, new { htmlAttributes = new { @class = "form-control" } })
+        <button type="submit" value="login">Login</button>
 
     }
 </div>
