Added the manager on the view

--- a/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
             <p>Start Date: </p><span>@ViewData["e_startdate"]</span>
             <p>Employment Type: </p><span>@ViewData["e_contract"]</span>
             <p>Department: </p><span>@ViewData["e_department"]</span>
-            <p>Reports To: </p><span>@ViewData["e_startdate"]</span>
+            <p>Reports To: </p><span>@ViewData["e_manager"]</span>
             <p>Same Department As:</p>
             <div class="list">
                 <span>John Doe</span>
