--- a/Employee-Intranet/Emp_Intranet-UI/Content/Dashboard.css
+++ b/Employee-Intranet/Emp_Intranet-UI/Content/Dashboard.css
@@ -182,6 +182,44 @@ section {
         font-size: 10px;
         font-family: Italiana;
     }
+.colleagues {
+    width: 100%;
+    height: 75px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+}
+    .colleagues p {
+        color: #262626;
+        text-align: right;
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
+    .colleagues ul {
+        list-style: none;
+        overflow-y: scroll;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .colleagues li {
+        color: #9D9D9D;
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: normal;
+    }
 
 .leave-card {
     border-radius: 10px;
@@ -197,7 +235,6 @@ section {
     gap: 0px;
     padding: 2px 20px 8px 20px;
 }
-
 .leave-cards {
     display: flex;
     flex-direction: row;
@@ -337,4 +374,28 @@ footer {
     font-size: small;
     color: black;
     font-family: Italiana;
+}
+
+
+
+
+::-webkit-scrollbar {
+    width: 7px; /* width of the scrollbar */
+}
+
+/* Handle on the scrollbar */
+::-webkit-scrollbar-thumb {
+    background-color: #888; /* color of the scrollbar handle */
+    border-radius: 3px;
+    width: 9px;
+}
+
+/* Track on the scrollbar */
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* color of the scrollbar track */
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* color of the scrollbar handle on hover */
 }
