--- a/Employee-Intranet/Emp_Intranet-UI/Content/Dashboard.css
+++ b/Employee-Intranet/Emp_Intranet-UI/Content/Dashboard.css
@@ -103,7 +103,7 @@ section {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
     gap: 8px 0px;
 }
 
@@ -212,15 +212,27 @@ section {
         align-items: center;
         justify-content: space-around;
     }
-    .colleagues li {
-        color: #9D9D9D;
-        font-family: Inter;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: normal;
-    }
-
+        .colleagues ul li {
+            color: #9D9D9D;
+            font-family: Inter;
+            font-size: 16px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+            width: 50%;
+            padding: 2px;
+            text-align: center;
+        }
+            .colleagues ul li:hover {
+                background: #56808C;
+                color: white;
+                border-radius: 5px;
+                box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+            }
+            /* Optional: Add padding to the first item if needed */
+            .colleagues ul li:first-child {
+                padding-top: 30px; 
+            }
 .leave-card {
     border-radius: 10px;
     background: #FFF;
