--- a/Employee-Intranet/Emp_Intranet-UI/Views/Auth/Login.cshtml
+++ b/Employee-Intranet/Emp_Intranet-UI/Views/Auth/Login.cshtml
@@ -21,9 +21,9 @@
         <h2>Sign In</h2>
         <!-- Display validation errors -->
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.ValidationMessageFor(model => model.user_email, "", new { @class = "text-danger" })
+        @Html.ValidationMessageFor(model => model.user_email, "", new { @class = "text-danger" }) 
         <span>Username/Email</span>
-        @Html.TextBoxFor(model => model.user_email, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.TextBoxFor(model => model.user_email, new { htmlAttributes = new { @class = "form-control" } });;
 
         @Html.ValidationMessageFor(model => model.user_password, "", new { @class = "text-danger" })
         <span>Password</span>
